properly added the whitelist plugin (pls run 'npm install' after pulling).  Added maps to details page.

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -25,3 +25,12 @@ $balanced: #6aca85 !default;
 
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
+
+.mapClass {
+	height: 50%;
+	width: 100%;
+}
+
+// .scroll-content, .scroll {
+// 	height: 100%;
+// }
