Added color variables for districts

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -18,9 +18,14 @@ $dark:                            #444 !default;
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
-
 $royal: #3e3e7d !default;
 $balanced: #6aca85 !default;
+$Northshore: #0D9BD7 !default;
+$Riverfront: #9A57A2 !default;
+$CityCenter: #00A75C !default;
+$TheBig9: #FEC212 !default;
+$BluffView: #E61E25 !default;
+$Southside: #EF5282 !default;
 
 
 // Include all of Ionic
