--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -31,9 +31,14 @@ $southside: #EF5282 !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
-.mapClass {
+.details-map {
 	height: 50%;
 	width: 100%;
+}
+
+.full-map {
+  height: 100%;
+  width: 100%;
 }
 
 .bluff-view {
@@ -64,6 +69,11 @@ $southside: #EF5282 !default;
 .utc-mlk {
 	background-color: $utcmlk;
 	color: white;
+}
+
+.map-button {
+  	background-color: $royal;
+  	color: white;
 }
 
 // .scroll-content, .scroll {
