Removed some comments.

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -41,6 +41,11 @@ $southside: #EF5282 !default;
   width: 100%;
 }
 
+.location-list {
+  height: 25%;
+  width: 100%;
+}
+
 .bluff-view {
 	background-color: $bluffview;
 	color: white;
